--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           name: Kompilacja kodu Java
           command: |
             mkdir -p build  # Tworzymy katalog na skompilowane pliki
-            javac -d build src/main/kalkulator.java  # Kompilujemy kod główny (klasy kalkulatora)
+            javac -d build src/kalkulator.java  # Kompilujemy kod główny (klasy kalkulatora)
 
       # Krok 2: Kompilacja testów
       - run:
