--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>Calculator</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-   <dependencies>
+         <dependencies>
     <!-- Zależność do JUnit 5 -->
     <dependency>
         <groupId>org.junit.jupiter</groupId>
@@ -33,3 +33,12 @@
         </plugin>
     </plugins>
 </build>
+
+
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+</project>
