--- a/pom.xml
+++ b/pom.xml
@@ -15,16 +15,26 @@
     </properties>
 
     <dependencies>
-        <!-- Zależność do JUnit 5 -->
+        <!-- Zależność do JUnit 5 (JUnit Jupiter API) -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Zależność do silnika JUnit 5 (JUnit Jupiter Engine) -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Zależność do JUnit Vintage (dla starszych testów JUnit 4, ale nie jest konieczna) -->
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
@@ -32,15 +42,16 @@
 
     <build>
         <plugins>
-            <!-- Plugin do uruchamiania testów JUnit 5 -->
+            <!-- Plugin do uruchamiania testów z JUnit 5 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.0.0-M5</version> <!-- Używamy nowszej wersji -->
                 <configuration>
-                    <useJUnitPlatform>true</useJUnitPlatform>
+                    <useJUnitPlatform>true</useJUnitPlatform> <!-- Włączamy JUnit 5 -->
                 </configuration>
             </plugin>
         </plugins>
     </build>
 </project>
+
